--- a/P010471.opf/layers/v001/Pagination.yml
+++ b/P010471.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 63b2e4a05b7f4495b8eb322aafb65426
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b8bb279baa364c97bfdf334c0369c06c:
