--- a/P010471.opf/meta.yml
+++ b/P010471.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010471
 initial_creation_type: ocr
+created_at: 27/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W23782
   title: གསུང་འབུམ། ཡེ་ཤེས་རྡོ་རྗེ
